parser/Parser.output
Terminals unused in grammar

   BOGUS
   '^'


State 34 conflicts: 1 shift/reduce
State 35 conflicts: 1 shift/reduce


Grammar

    0 $accept: File $end

    1 File: ValidInput EoF
    2     | ValidInput END

    3 ValidInput: %empty
    4           | ValidInput Assignment
    5           | ValidInput GroupInput

    6 Assignment: Assignable '=' Symbol ';'
    7           | Assignable '=' IntExpr ';'
    8           | Assignable '=' DblExpr ';'
    9           | Assignable '=' IntSetExpr ';'
   10           | Assignable '=' DblSetExpr ';'
   11           | Assignable '=' StrSetExpr ';'
   12           | Assignable '=' String ';'

   13 $@1: %empty

   14 GroupInput: UNDER Assignable '{' $@1 ValidInput '}'

   15 Assignable: Symbol
   16           | Assignable '.' Symbol
   17           | Assignable '[' IntExpr ']'

   18 IntExpr: IntConstant
   19        | '(' IntExpr ')'
   20        | IntExpr '+' IntExpr
   21        | IntExpr '-' IntExpr
   22        | IntExpr '*' IntExpr
   23        | IntExpr '/' IntExpr

   24 DblExpr: DblConstant
   25        | '(' DblExpr ')'
   26        | DblExpr '+' DblExpr
   27        | DblExpr '+' IntExpr
   28        | IntExpr '+' DblExpr
   29        | DblExpr '-' DblExpr
   30        | DblExpr '-' IntExpr
   31        | IntExpr '-' DblExpr
   32        | DblExpr '*' DblExpr
   33        | IntExpr '*' DblExpr
   34        | DblExpr '*' IntExpr
   35        | DblExpr '/' DblExpr
   36        | IntExpr '/' DblExpr
   37        | DblExpr '/' IntExpr

   38 IntSetExpr: '(' IntSetLoop ')'

   39 IntSetLoop: IntExpr
   40           | IntSetLoop ',' IntExpr

   41 DblSetExpr: '(' DblSetLoop ')'

   42 DblSetLoop: DblExpr
   43           | DblSetLoop ',' DblExpr

   44 StrSetExpr: '(' StrSetLoop ')'

   45 StrSetLoop: String
   46           | StrSetLoop ',' String


Terminals, with rules where they appear

$end (0) 0
'(' (40) 19 25 38 41 44
')' (41) 19 25 38 41 44
'*' (42) 22 32 33 34
'+' (43) 20 26 27 28
',' (44) 40 43 46
'-' (45) 21 29 30 31
'.' (46) 16
'/' (47) 23 35 36 37
';' (59) 6 7 8 9 10 11 12
'=' (61) 6 7 8 9 10 11 12
'[' (91) 17
']' (93) 17
'^' (94)
'{' (123) 14
'}' (125) 14
error (256)
UNDER (258) 14
EoF (259) 1
IntConstant (260) 18
DblConstant (261) 24
Symbol (262) 6 15 16
String (263) 12 45 46
END (264) 2
BOGUS (265)


Nonterminals, with rules where they appear

$accept (26)
    on left: 0
File (27)
    on left: 1 2, on right: 0
ValidInput (28)
    on left: 3 4 5, on right: 1 2 4 5 14
Assignment (29)
    on left: 6 7 8 9 10 11 12, on right: 4
GroupInput (30)
    on left: 14, on right: 5
$@1 (31)
    on left: 13, on right: 14
Assignable (32)
    on left: 15 16 17, on right: 6 7 8 9 10 11 12 14 16 17
IntExpr (33)
    on left: 18 19 20 21 22 23, on right: 7 17 19 20 21 22 23 27 28
    30 31 33 34 36 37 39 40
DblExpr (34)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37, on right: 8
    25 26 27 28 29 30 31 32 33 34 35 36 37 42 43
IntSetExpr (35)
    on left: 38, on right: 9
IntSetLoop (36)
    on left: 39 40, on right: 38 40
DblSetExpr (37)
    on left: 41, on right: 10
DblSetLoop (38)
    on left: 42 43, on right: 41 43
StrSetExpr (39)
    on left: 44, on right: 11
StrSetLoop (40)
    on left: 45 46, on right: 44 46


State 0

    0 $accept: . File $end

    $default  reduce using rule 3 (ValidInput)

    File        go to state 1
    ValidInput  go to state 2


State 1

    0 $accept: File . $end

    $end  shift, and go to state 3


State 2

    1 File: ValidInput . EoF
    2     | ValidInput . END
    4 ValidInput: ValidInput . Assignment
    5           | ValidInput . GroupInput

    UNDER   shift, and go to state 4
    EoF     shift, and go to state 5
    Symbol  shift, and go to state 6
    END     shift, and go to state 7

    Assignment  go to state 8
    GroupInput  go to state 9
    Assignable  go to state 10


State 3

    0 $accept: File $end .

    $default  accept


State 4

   14 GroupInput: UNDER . Assignable '{' $@1 ValidInput '}'

    Symbol  shift, and go to state 6

    Assignable  go to state 11


State 5

    1 File: ValidInput EoF .

    $default  reduce using rule 1 (File)


State 6

   15 Assignable: Symbol .

    $default  reduce using rule 15 (Assignable)


State 7

    2 File: ValidInput END .

    $default  reduce using rule 2 (File)


State 8

    4 ValidInput: ValidInput Assignment .

    $default  reduce using rule 4 (ValidInput)


State 9

    5 ValidInput: ValidInput GroupInput .

    $default  reduce using rule 5 (ValidInput)


State 10

    6 Assignment: Assignable . '=' Symbol ';'
    7           | Assignable . '=' IntExpr ';'
    8           | Assignable . '=' DblExpr ';'
    9           | Assignable . '=' IntSetExpr ';'
   10           | Assignable . '=' DblSetExpr ';'
   11           | Assignable . '=' StrSetExpr ';'
   12           | Assignable . '=' String ';'
   16 Assignable: Assignable . '.' Symbol
   17           | Assignable . '[' IntExpr ']'

    '='  shift, and go to state 12
    '.'  shift, and go to state 13
    '['  shift, and go to state 14


State 11

   14 GroupInput: UNDER Assignable . '{' $@1 ValidInput '}'
   16 Assignable: Assignable . '.' Symbol
   17           | Assignable . '[' IntExpr ']'

    '{'  shift, and go to state 15
    '.'  shift, and go to state 13
    '['  shift, and go to state 14


State 12

    6 Assignment: Assignable '=' . Symbol ';'
    7           | Assignable '=' . IntExpr ';'
    8           | Assignable '=' . DblExpr ';'
    9           | Assignable '=' . IntSetExpr ';'
   10           | Assignable '=' . DblSetExpr ';'
   11           | Assignable '=' . StrSetExpr ';'
   12           | Assignable '=' . String ';'

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    Symbol       shift, and go to state 18
    String       shift, and go to state 19
    '('          shift, and go to state 20

    IntExpr     go to state 21
    DblExpr     go to state 22
    IntSetExpr  go to state 23
    DblSetExpr  go to state 24
    StrSetExpr  go to state 25


State 13

   16 Assignable: Assignable '.' . Symbol

    Symbol  shift, and go to state 26


State 14

   17 Assignable: Assignable '[' . IntExpr ']'

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 27

    IntExpr  go to state 28


State 15

   14 GroupInput: UNDER Assignable '{' . $@1 ValidInput '}'

    $default  reduce using rule 13 ($@1)

    $@1  go to state 29


State 16

   18 IntExpr: IntConstant .

    $default  reduce using rule 18 (IntExpr)


State 17

   24 DblExpr: DblConstant .

    $default  reduce using rule 24 (DblExpr)


State 18

    6 Assignment: Assignable '=' Symbol . ';'

    ';'  shift, and go to state 30


State 19

   12 Assignment: Assignable '=' String . ';'

    ';'  shift, and go to state 31


State 20

   19 IntExpr: '(' . IntExpr ')'
   25 DblExpr: '(' . DblExpr ')'
   38 IntSetExpr: '(' . IntSetLoop ')'
   41 DblSetExpr: '(' . DblSetLoop ')'
   44 StrSetExpr: '(' . StrSetLoop ')'

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    String       shift, and go to state 32
    '('          shift, and go to state 33

    IntExpr     go to state 34
    DblExpr     go to state 35
    IntSetLoop  go to state 36
    DblSetLoop  go to state 37
    StrSetLoop  go to state 38


State 21

    7 Assignment: Assignable '=' IntExpr . ';'
   20 IntExpr: IntExpr . '+' IntExpr
   21        | IntExpr . '-' IntExpr
   22        | IntExpr . '*' IntExpr
   23        | IntExpr . '/' IntExpr
   28 DblExpr: IntExpr . '+' DblExpr
   31        | IntExpr . '-' DblExpr
   33        | IntExpr . '*' DblExpr
   36        | IntExpr . '/' DblExpr

    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    ';'  shift, and go to state 43


State 22

    8 Assignment: Assignable '=' DblExpr . ';'
   26 DblExpr: DblExpr . '+' DblExpr
   27        | DblExpr . '+' IntExpr
   29        | DblExpr . '-' DblExpr
   30        | DblExpr . '-' IntExpr
   32        | DblExpr . '*' DblExpr
   34        | DblExpr . '*' IntExpr
   35        | DblExpr . '/' DblExpr
   37        | DblExpr . '/' IntExpr

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ';'  shift, and go to state 48


State 23

    9 Assignment: Assignable '=' IntSetExpr . ';'

    ';'  shift, and go to state 49


State 24

   10 Assignment: Assignable '=' DblSetExpr . ';'

    ';'  shift, and go to state 50


State 25

   11 Assignment: Assignable '=' StrSetExpr . ';'

    ';'  shift, and go to state 51


State 26

   16 Assignable: Assignable '.' Symbol .

    $default  reduce using rule 16 (Assignable)


State 27

   19 IntExpr: '(' . IntExpr ')'

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 27

    IntExpr  go to state 52


State 28

   17 Assignable: Assignable '[' IntExpr . ']'
   20 IntExpr: IntExpr . '+' IntExpr
   21        | IntExpr . '-' IntExpr
   22        | IntExpr . '*' IntExpr
   23        | IntExpr . '/' IntExpr

    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56
    ']'  shift, and go to state 57


State 29

   14 GroupInput: UNDER Assignable '{' $@1 . ValidInput '}'

    $default  reduce using rule 3 (ValidInput)

    ValidInput  go to state 58


State 30

    6 Assignment: Assignable '=' Symbol ';' .

    $default  reduce using rule 6 (Assignment)


State 31

   12 Assignment: Assignable '=' String ';' .

    $default  reduce using rule 12 (Assignment)


State 32

   45 StrSetLoop: String .

    $default  reduce using rule 45 (StrSetLoop)


State 33

   19 IntExpr: '(' . IntExpr ')'
   25 DblExpr: '(' . DblExpr ')'

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 33

    IntExpr  go to state 59
    DblExpr  go to state 60


State 34

   19 IntExpr: '(' IntExpr . ')'
   20        | IntExpr . '+' IntExpr
   21        | IntExpr . '-' IntExpr
   22        | IntExpr . '*' IntExpr
   23        | IntExpr . '/' IntExpr
   28 DblExpr: IntExpr . '+' DblExpr
   31        | IntExpr . '-' DblExpr
   33        | IntExpr . '*' DblExpr
   36        | IntExpr . '/' DblExpr
   39 IntSetLoop: IntExpr .

    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    ')'  shift, and go to state 61

    ')'       [reduce using rule 39 (IntSetLoop)]
    $default  reduce using rule 39 (IntSetLoop)


State 35

   25 DblExpr: '(' DblExpr . ')'
   26        | DblExpr . '+' DblExpr
   27        | DblExpr . '+' IntExpr
   29        | DblExpr . '-' DblExpr
   30        | DblExpr . '-' IntExpr
   32        | DblExpr . '*' DblExpr
   34        | DblExpr . '*' IntExpr
   35        | DblExpr . '/' DblExpr
   37        | DblExpr . '/' IntExpr
   42 DblSetLoop: DblExpr .

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ')'  shift, and go to state 62

    ')'       [reduce using rule 42 (DblSetLoop)]
    $default  reduce using rule 42 (DblSetLoop)


State 36

   38 IntSetExpr: '(' IntSetLoop . ')'
   40 IntSetLoop: IntSetLoop . ',' IntExpr

    ')'  shift, and go to state 63
    ','  shift, and go to state 64


State 37

   41 DblSetExpr: '(' DblSetLoop . ')'
   43 DblSetLoop: DblSetLoop . ',' DblExpr

    ')'  shift, and go to state 65
    ','  shift, and go to state 66


State 38

   44 StrSetExpr: '(' StrSetLoop . ')'
   46 StrSetLoop: StrSetLoop . ',' String

    ')'  shift, and go to state 67
    ','  shift, and go to state 68


State 39

   20 IntExpr: IntExpr '+' . IntExpr
   28 DblExpr: IntExpr '+' . DblExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 33

    IntExpr  go to state 69
    DblExpr  go to state 70


State 40

   21 IntExpr: IntExpr '-' . IntExpr
   31 DblExpr: IntExpr '-' . DblExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 33

    IntExpr  go to state 71
    DblExpr  go to state 72


State 41

   22 IntExpr: IntExpr '*' . IntExpr
   33 DblExpr: IntExpr '*' . DblExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 33

    IntExpr  go to state 73
    DblExpr  go to state 74


State 42

   23 IntExpr: IntExpr '/' . IntExpr
   36 DblExpr: IntExpr '/' . DblExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 33

    IntExpr  go to state 75
    DblExpr  go to state 76


State 43

    7 Assignment: Assignable '=' IntExpr ';' .

    $default  reduce using rule 7 (Assignment)


State 44

   26 DblExpr: DblExpr '+' . DblExpr
   27        | DblExpr '+' . IntExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 33

    IntExpr  go to state 77
    DblExpr  go to state 78


State 45

   29 DblExpr: DblExpr '-' . DblExpr
   30        | DblExpr '-' . IntExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 33

    IntExpr  go to state 79
    DblExpr  go to state 80


State 46

   32 DblExpr: DblExpr '*' . DblExpr
   34        | DblExpr '*' . IntExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 33

    IntExpr  go to state 81
    DblExpr  go to state 82


State 47

   35 DblExpr: DblExpr '/' . DblExpr
   37        | DblExpr '/' . IntExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 33

    IntExpr  go to state 83
    DblExpr  go to state 84


State 48

    8 Assignment: Assignable '=' DblExpr ';' .

    $default  reduce using rule 8 (Assignment)


State 49

    9 Assignment: Assignable '=' IntSetExpr ';' .

    $default  reduce using rule 9 (Assignment)


State 50

   10 Assignment: Assignable '=' DblSetExpr ';' .

    $default  reduce using rule 10 (Assignment)


State 51

   11 Assignment: Assignable '=' StrSetExpr ';' .

    $default  reduce using rule 11 (Assignment)


State 52

   19 IntExpr: '(' IntExpr . ')'
   20        | IntExpr . '+' IntExpr
   21        | IntExpr . '-' IntExpr
   22        | IntExpr . '*' IntExpr
   23        | IntExpr . '/' IntExpr

    '+'  shift, and go to state 53
    '-'  shift, and go to state 54
    '*'  shift, and go to state 55
    '/'  shift, and go to state 56
    ')'  shift, and go to state 61


State 53

   20 IntExpr: IntExpr '+' . IntExpr

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 27

    IntExpr  go to state 85


State 54

   21 IntExpr: IntExpr '-' . IntExpr

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 27

    IntExpr  go to state 86


State 55

   22 IntExpr: IntExpr '*' . IntExpr

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 27

    IntExpr  go to state 87


State 56

   23 IntExpr: IntExpr '/' . IntExpr

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 27

    IntExpr  go to state 88


State 57

   17 Assignable: Assignable '[' IntExpr ']' .

    $default  reduce using rule 17 (Assignable)


State 58

    4 ValidInput: ValidInput . Assignment
    5           | ValidInput . GroupInput
   14 GroupInput: UNDER Assignable '{' $@1 ValidInput . '}'

    UNDER   shift, and go to state 4
    Symbol  shift, and go to state 6
    '}'     shift, and go to state 89

    Assignment  go to state 8
    GroupInput  go to state 9
    Assignable  go to state 10


State 59

   19 IntExpr: '(' IntExpr . ')'
   20        | IntExpr . '+' IntExpr
   21        | IntExpr . '-' IntExpr
   22        | IntExpr . '*' IntExpr
   23        | IntExpr . '/' IntExpr
   28 DblExpr: IntExpr . '+' DblExpr
   31        | IntExpr . '-' DblExpr
   33        | IntExpr . '*' DblExpr
   36        | IntExpr . '/' DblExpr

    '+'  shift, and go to state 39
    '-'  shift, and go to state 40
    '*'  shift, and go to state 41
    '/'  shift, and go to state 42
    ')'  shift, and go to state 61


State 60

   25 DblExpr: '(' DblExpr . ')'
   26        | DblExpr . '+' DblExpr
   27        | DblExpr . '+' IntExpr
   29        | DblExpr . '-' DblExpr
   30        | DblExpr . '-' IntExpr
   32        | DblExpr . '*' DblExpr
   34        | DblExpr . '*' IntExpr
   35        | DblExpr . '/' DblExpr
   37        | DblExpr . '/' IntExpr

    '+'  shift, and go to state 44
    '-'  shift, and go to state 45
    '*'  shift, and go to state 46
    '/'  shift, and go to state 47
    ')'  shift, and go to state 62


State 61

   19 IntExpr: '(' IntExpr ')' .

    $default  reduce using rule 19 (IntExpr)


State 62

   25 DblExpr: '(' DblExpr ')' .

    $default  reduce using rule 25 (DblExpr)


State 63

   38 IntSetExpr: '(' IntSetLoop ')' .

    $default  reduce using rule 38 (IntSetExpr)


State 64

   40 IntSetLoop: IntSetLoop ',' . IntExpr

    IntConstant  shift, and go to state 16
    '('          shift, and go to state 27

    IntExpr  go to state 90


State 65

   41 DblSetExpr: '(' DblSetLoop ')' .

    $default  reduce using rule 41 (DblSetExpr)


State 66

   43 DblSetLoop: DblSetLoop ',' . DblExpr

    IntConstant  shift, and go to state 16
    DblConstant  shift, and go to state 17
    '('          shift, and go to state 33

    IntExpr  go to state 91
    DblExpr  go to state 92


State 67

   44 StrSetExpr: '(' StrSetLoop ')' .

    $default  reduce using rule 44 (StrSetExpr)


State 68

   46 StrSetLoop: StrSetLoop ',' . String

    String  shift, and go to state 93


State 69

   20 IntExpr: IntExpr . '+' IntExpr
   20        | IntExpr '+' IntExpr .
   21        | IntExpr . '-' IntExpr
   22        | IntExpr . '*' IntExpr
   23        | IntExpr . '/' IntExpr
   28 DblExpr: IntExpr . '+' DblExpr
   31        | IntExpr . '-' DblExpr
   33        | IntExpr . '*' DblExpr
   36        | IntExpr . '/' DblExpr

    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 20 (IntExpr)


State 70

   26 DblExpr: DblExpr . '+' DblExpr
   27        | DblExpr . '+' IntExpr
   28        | IntExpr '+' DblExpr .
   29        | DblExpr . '-' DblExpr
   30        | DblExpr . '-' IntExpr
   32        | DblExpr . '*' DblExpr
   34        | DblExpr . '*' IntExpr
   35        | DblExpr . '/' DblExpr
   37        | DblExpr . '/' IntExpr

    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 28 (DblExpr)


State 71

   20 IntExpr: IntExpr . '+' IntExpr
   21        | IntExpr . '-' IntExpr
   21        | IntExpr '-' IntExpr .
   22        | IntExpr . '*' IntExpr
   23        | IntExpr . '/' IntExpr
   28 DblExpr: IntExpr . '+' DblExpr
   31        | IntExpr . '-' DblExpr
   33        | IntExpr . '*' DblExpr
   36        | IntExpr . '/' DblExpr

    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 21 (IntExpr)


State 72

   26 DblExpr: DblExpr . '+' DblExpr
   27        | DblExpr . '+' IntExpr
   29        | DblExpr . '-' DblExpr
   30        | DblExpr . '-' IntExpr
   31        | IntExpr '-' DblExpr .
   32        | DblExpr . '*' DblExpr
   34        | DblExpr . '*' IntExpr
   35        | DblExpr . '/' DblExpr
   37        | DblExpr . '/' IntExpr

    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 31 (DblExpr)


State 73

   20 IntExpr: IntExpr . '+' IntExpr
   21        | IntExpr . '-' IntExpr
   22        | IntExpr . '*' IntExpr
   22        | IntExpr '*' IntExpr .
   23        | IntExpr . '/' IntExpr
   28 DblExpr: IntExpr . '+' DblExpr
   31        | IntExpr . '-' DblExpr
   33        | IntExpr . '*' DblExpr
   36        | IntExpr . '/' DblExpr

    $default  reduce using rule 22 (IntExpr)


State 74

   26 DblExpr: DblExpr . '+' DblExpr
   27        | DblExpr . '+' IntExpr
   29        | DblExpr . '-' DblExpr
   30        | DblExpr . '-' IntExpr
   32        | DblExpr . '*' DblExpr
   33        | IntExpr '*' DblExpr .
   34        | DblExpr . '*' IntExpr
   35        | DblExpr . '/' DblExpr
   37        | DblExpr . '/' IntExpr

    $default  reduce using rule 33 (DblExpr)


State 75

   20 IntExpr: IntExpr . '+' IntExpr
   21        | IntExpr . '-' IntExpr
   22        | IntExpr . '*' IntExpr
   23        | IntExpr . '/' IntExpr
   23        | IntExpr '/' IntExpr .
   28 DblExpr: IntExpr . '+' DblExpr
   31        | IntExpr . '-' DblExpr
   33        | IntExpr . '*' DblExpr
   36        | IntExpr . '/' DblExpr

    $default  reduce using rule 23 (IntExpr)


State 76

   26 DblExpr: DblExpr . '+' DblExpr
   27        | DblExpr . '+' IntExpr
   29        | DblExpr . '-' DblExpr
   30        | DblExpr . '-' IntExpr
   32        | DblExpr . '*' DblExpr
   34        | DblExpr . '*' IntExpr
   35        | DblExpr . '/' DblExpr
   36        | IntExpr '/' DblExpr .
   37        | DblExpr . '/' IntExpr

    $default  reduce using rule 36 (DblExpr)


State 77

   20 IntExpr: IntExpr . '+' IntExpr
   21        | IntExpr . '-' IntExpr
   22        | IntExpr . '*' IntExpr
   23        | IntExpr . '/' IntExpr
   27 DblExpr: DblExpr '+' IntExpr .
   28        | IntExpr . '+' DblExpr
   31        | IntExpr . '-' DblExpr
   33        | IntExpr . '*' DblExpr
   36        | IntExpr . '/' DblExpr

    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 27 (DblExpr)


State 78

   26 DblExpr: DblExpr . '+' DblExpr
   26        | DblExpr '+' DblExpr .
   27        | DblExpr . '+' IntExpr
   29        | DblExpr . '-' DblExpr
   30        | DblExpr . '-' IntExpr
   32        | DblExpr . '*' DblExpr
   34        | DblExpr . '*' IntExpr
   35        | DblExpr . '/' DblExpr
   37        | DblExpr . '/' IntExpr

    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 26 (DblExpr)


State 79

   20 IntExpr: IntExpr . '+' IntExpr
   21        | IntExpr . '-' IntExpr
   22        | IntExpr . '*' IntExpr
   23        | IntExpr . '/' IntExpr
   28 DblExpr: IntExpr . '+' DblExpr
   30        | DblExpr '-' IntExpr .
   31        | IntExpr . '-' DblExpr
   33        | IntExpr . '*' DblExpr
   36        | IntExpr . '/' DblExpr

    '*'  shift, and go to state 41
    '/'  shift, and go to state 42

    $default  reduce using rule 30 (DblExpr)


State 80

   26 DblExpr: DblExpr . '+' DblExpr
   27        | DblExpr . '+' IntExpr
   29        | DblExpr . '-' DblExpr
   29        | DblExpr '-' DblExpr .
   30        | DblExpr . '-' IntExpr
   32        | DblExpr . '*' DblExpr
   34        | DblExpr . '*' IntExpr
   35        | DblExpr . '/' DblExpr
   37        | DblExpr . '/' IntExpr

    '*'  shift, and go to state 46
    '/'  shift, and go to state 47

    $default  reduce using rule 29 (DblExpr)


State 81

   20 IntExpr: IntExpr . '+' IntExpr
   21        | IntExpr . '-' IntExpr
   22        | IntExpr . '*' IntExpr
   23        | IntExpr . '/' IntExpr
   28 DblExpr: IntExpr . '+' DblExpr
   31        | IntExpr . '-' DblExpr
   33        | IntExpr . '*' DblExpr
   34        | DblExpr '*' IntExpr .
   36        | IntExpr . '/' DblExpr

    $default  reduce using rule 34 (DblExpr)


State 82

   26 DblExpr: DblExpr . '+' DblExpr
   27        | DblExpr . '+' IntExpr
   29        | DblExpr . '-' DblExpr
   30        | DblExpr . '-' IntExpr
   32        | DblExpr . '*' DblExpr
   32        | DblExpr '*' DblExpr .
   34        | DblExpr . '*' IntExpr
   35        | DblExpr . '/' DblExpr
   37        | DblExpr . '/' IntExpr

    $default  reduce using rule 32 (DblExpr)


State 83

   20 IntExpr: IntExpr . '+' IntExpr
   21        | IntExpr . '-' IntExpr
   22        | IntExpr . '*' IntExpr
   23        | IntExpr . '/' IntExpr
   28 DblExpr: IntExpr . '+' DblExpr
   31        | IntExpr . '-' DblExpr
   33        | IntExpr . '*' DblExpr
   36        | IntExpr . '/' DblExpr
   37        | DblExpr '/' IntExpr .

    $default  reduce using rule 37 (DblExpr)


State 84

   26 DblExpr: DblExpr . '+' DblExpr
   27        | DblExpr . '+' IntExpr
   29        | DblExpr . '-' DblExpr
   30        | DblExpr . '-' IntExpr
   32        | DblExpr . '*' DblExpr
   34        | DblExpr . '*' IntExpr
   35        | DblExpr . '/' DblExpr
   35        | DblExpr '/' DblExpr .
   37        | DblExpr . '/' IntExpr

    $default  reduce using rule 35 (DblExpr)


State 85

   20 IntExpr: IntExpr . '+' IntExpr
   20        | IntExpr '+' IntExpr .
   21        | IntExpr . '-' IntExpr
   22        | IntExpr . '*' IntExpr
   23        | IntExpr . '/' IntExpr

    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 20 (IntExpr)


State 86

   20 IntExpr: IntExpr . '+' IntExpr
   21        | IntExpr . '-' IntExpr
   21        | IntExpr '-' IntExpr .
   22        | IntExpr . '*' IntExpr
   23        | IntExpr . '/' IntExpr

    '*'  shift, and go to state 55
    '/'  shift, and go to state 56

    $default  reduce using rule 21 (IntExpr)


State 87

   20 IntExpr: IntExpr . '+' IntExpr
   21        | IntExpr . '-' IntExpr
   22        | IntExpr . '*' IntExpr
   22        | IntExpr '*' IntExpr .
   23        | IntExpr . '/' IntExpr

    $default  reduce using rule 22 (IntExpr)


State 88
